enhance single responsibility service